src/checker/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__fragments__fragment_spread_indirect_recursion.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 12,
            column: 16,
            file: 0,
            builtin: false,
        },
        message: RecursingFragmentSpread {
            name: "F",
        },
        additional_info: [],
    },
]
