src/checker/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__fragments__fragment_spread_nested_recursion.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 9,
            column: 20,
            file: 0,
            builtin: false,
        },
        message: RecursingFragmentSpread {
            name: "F",
        },
        additional_info: [],
    },
]
