src/checker/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__fragments__wrong_inline_fragment_target_obj.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 2,
            column: 16,
            file: 0,
            builtin: false,
        },
        message: FragmentConditionNeverMatches {
            condition: "Post",
            scope: "User",
        },
        additional_info: [
            (
                Pos {
                    line: 23,
                    column: 12,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "Post",
                },
            ),
            (
                Pos {
                    line: 12,
                    column: 12,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "User",
                },
            ),
        ],
    },
]
